# pybind11_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MyDate/: CMakeLists.txt
MyDate/include/: mydate.hpp
MyDate/src/: mydate.cpp
MyDate/tests/: tests.cpp
PyMyDate/: CMakeLists.txt
PyMyDate/src/: pymydate.cpp
PyMyDate/tests/: test.py
python/: MANIFEST.in  README.md  setup.py
python/notebooks/: notebook.ipynb
